Update Concurrency - CompletableFuture