@@ -7,7 +7,7 @@ public class CompletableFutureThenCombine {
 
     public static void main(String[] args) throws ExecutionException, InterruptedException {
         CompletableFuture<Double> pi = CompletableFuture.supplyAsync(() -> Math.PI);
-        CompletableFuture<Double> radius = CompletableFuture.supplyAsync(() -> new Double(34));
+        CompletableFuture<Double> radius = CompletableFuture.supplyAsync(() -> Double.valueOf(34));
 
         CompletableFuture<Double> result = pi.thenCombine(radius, CompletableFutureThenCombine::calculateAreaCircle);
 
